--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
     </footer>
 
     <script>
-        // Note to self: remember to remove this before production deployment
-        let hidden_flag = "flag{inspect_to_conquer}";
+        let hidden_flag = "ctf{yuri}";
     </script>
 </body>
 </html>
